WIP
-----------------------------
* General
  - Added new window position verification function
    that fixed the issue with main window being forced
    to move to first screen.
    The new verification function will now correctly detect
    multi-screen monitors, verifying and auto-correcting
    main window position if necessary.
    Thanks to DanRZ for helping with extensive testing
    and providing valuable feedback.
  - Added new command line argument "--log-level="
    that can be used to set logging output level.
    "--log-level=0" outputs only warning or error log to console.
    "--log-level=1" outputs all log to console.
    "--log-level=2" outputs all log to both console & tinypedal.log file.
    Default logging output level is set on "1" if argument is not set.
    Example usage:
    ".\tinypedal.exe --log-level=2"
    Note:
    On windows, tinypedal.log is located under APP root folder.
    On linux, tinypedal.log is located under /home/.config/TinyPedal/ folder.
  - Added "Show log" option in Help menu for easy accessing to application log.
  - "Reset data" option is now also accessible from tray menu.

* [New]Heatmap Editor
  - "Heatmap editor" can now be accessed from "Config" menu in main window,
    see User Guide "Heatmap preset" section for details.

* Linux
  - Fixed wrong "button" argument that breaks "Reset" button in config dialog.

* User guide
  - Added "Heatmap Editor" info in "Heatmap preset" section.
  - Added "Command line arguments" section guide.

2.6.0 (2024-01-06)
-----------------------------
* General
  - Optimized and improved performance of most modules and widgets,
    with roughly 50-100% less overall CPU usage than previously.
  - Significantly optimized some resource-heavy Widgets
    with 5-10 times less CPU usage than previously, notably:
    Navigation, Trailing, Track map Widgets.

* Engine Widget
  - Added "show_rpm_maximum" option,
    which shows maximum engine RPM (rev limit).

* Trailing Widget