@@ -32,6 +32,7 @@ APPLICATION_DEFAULT = {
     "compatibility": {
         "enable_bypass_window_manager": False,
         "enable_translucent_background": True,
+        "enable_window_position_correction": True,
         "global_bkg_color": "#000000",
         "grid_move_size": 8,
     },
